# reusable_files

./: LICENSE_template  README.md
cmake/: utils.cmake
cmake/templates/: VERSION.in
new_cpp_project/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
new_cpp_project/src/: CMakeLists.txt  main.cpp
new_cpp_project/test/: main.cpp
new_cpp_project/tests/: CMakeLists.txt
rust/no-cargo-boilerplate/: main.rs  readme.md
unreal_git/: .gitignore
